@@ -97,6 +97,7 @@ rwtestAllXml() {
       rwtestXml testImplicitMeasure1.xml
       rwtestXml testKeysig1.xml
       rwtestXml testLines1.xml
+      rwtestXml testLines2.xml
       rwtestXml testMetaData.xml
       rwtestXml testMultiMeasureRest.xml
       rwtestXml testNoteAttributes1.xml
