@@ -1,3 +1,5 @@
+11.jan (lv)
+      - fix import of MusicXML bracket line-end
 10.jan (ws)
       - fixes for "insert measure" operations
       - New command line option "-n" to start with the "new score" wizard
